feat: finish header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "rootDir": "./",
-    "baseUrl": "./dist/",
+    "rootDir": "./src",
     "outDir": "./dist/js",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
